Simplify maintenance and raw event storage
